Drop SMB traffic ##61

--- a/roles/cloud-digitalocean/tasks/main.yml
+++ b/roles/cloud-digitalocean/tasks/main.yml
@@ -34,6 +34,8 @@
     dns_enabled: "{{ dns_enabled }}"
     auditd_enabled: " {{ auditd_enabled }}"
     easyrsa_p12_export_password: "{{ easyrsa_p12_export_password }}"
+    cloud_provider: digitalocean
+    ipv6_support: yes
 
 - name: Wait for SSH to become available
   local_action: "wait_for port=22 host={{ do.droplet.ip_address }} timeout=320"
