--- a/roles/security/handlers/main.yml
+++ b/roles/security/handlers/main.yml
@@ -1,5 +1,8 @@
 - name: restart rsyslog
   service: name=rsyslog state=restarted
-
+  
+- name: save iptables
+  command: service netfilter-persistent save
+  
 - name: flush routing cache
   shell: echo 1 > /proc/sys/net/ipv4/route/flush
