new iptabes deployment #61

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,3 +9,4 @@ record_host_keys = False
 
 [ssh_connection]
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null
+scp_if_ssh = True
