--- a/config.cfg
+++ b/config.cfg
@@ -8,7 +8,8 @@ easyrsa_cert_expire: 3650
 easyrsa_reinit_existent: False
 
 vpn_network: 10.19.48.0/24
-vpn_network_ipv6: 'fd9d:bc11:4021:69ce::/64'
+vpn_network_ipv6: 'fd9d:bc11:4020::/48'
+# https://www.sixxs.net/tools/whois/?fd9d:bc11:4020::/48
 server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
