--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -70,4 +70,13 @@
   notify:
     - restart loopback
     
-- meta: flush_handlers    
+- meta: flush_handlers
+
+- name: Enable packet forwarding for IPv4
+  sysctl: name="{{ item }}" value=1
+  with_items:
+    - net.ipv4.ip_forward
+    - net.ipv4.conf.all.forwarding
+
+- name: Enable packet forwarding for IPv6
+  sysctl: name=net.ipv6.conf.all.forwarding value=1
