make local ip changeable #67

--- a/config.cfg
+++ b/config.cfg
@@ -22,6 +22,9 @@ dns_servers:
   - 8.8.4.4
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
+  
+# IP address for proxy and local dns resolver
+local_service_ip: 172.16.0.1 
 
 users:
   - mr.smith
