--- a/config.cfg
+++ b/config.cfg
@@ -23,7 +23,7 @@ dns_servers:
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
   
-# IP address for proxy and local dns resolver
+# IP address for the proxy and the local dns resolver
 local_service_ip: 172.16.0.1 
 
 users:
