--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -53,6 +53,7 @@
     - sendmail
     - unattended-upgrades
     - iptables-persistent
+    - cgroup-tools
 
 - name: Configure unattended-upgrades
   template: src=50unattended-upgrades.j2 dest=/etc/apt/apt.conf.d/50unattended-upgrades owner=root group=root mode=0644
