--- a/roles/vpn/handlers/main.yml
+++ b/roles/vpn/handlers/main.yml
@@ -1,5 +1,8 @@
 - name: restart strongswan
   service: name=strongswan state=restarted daemon_reload=yes
+  
+- name: daemon-reload
+  shell: systemctl systemctl daemon-reload
 
 - name: restart apparmor
   service: name=apparmor state=restarted
