--- a/roles/vpn/handlers/main.yml
+++ b/roles/vpn/handlers/main.yml
@@ -1,5 +1,5 @@
 - name: restart strongswan
-  service: name=strongswan state=restarted daemon_reload=yes
+  service: name=strongswan state=restarted
   
 - name: daemon-reload
   shell: systemctl daemon-reload
