--- a/non-cloud.yml
+++ b/non-cloud.yml
@@ -1,47 +1,48 @@
+# vim:ft=ansible:
 - hosts: localhost
   gather_facts: False
   vars_files:
     - config.cfg
+
   vars_prompt:
+  - name: "server_ip"
+    prompt: "Enter IP address of your server: (use localhost for local installation)\n"
+    default: localhost
+    private: no
 
-    - name: "server_ip"
-      prompt: "Enter IP address of your server: (use localhost for local installation)\n"
-      default: localhost
-      private: no
+  - name: "server_user"
+    prompt: "What user should we use to login on the server? (ignore if you're deploying to localhost):\n"
+    default: "root"
+    private: no
 
-    - name: "server_user"
-      prompt: "What user should we use to login on the server? (ignore if you're deploying to localhost):\n"
-      default: "root"
-      private: no
+  - name: "dns_enabled"
+    prompt: "Do you want to install a local DNS resolver to block ads while surfing? (y/n):\n"
+    default: "y"
+    private: no
 
-    - name: "dns_enabled"
-      prompt: "Do you want to install a local DNS resolver to block ads while surfing? (Y or N):\n"
-      default: "Y"
-      private: no
-      
-    - name: "proxy_enabled"
-      prompt: "Do you want to install a proxy to block ads and decrease traffic usage while surfing? (Y or N):\n"
-      default: "Y"
-      private: no
+  - name: "proxy_enabled"
+    prompt: "Do you want to install an HTTP proxy to block ads and decrease traffic usage while surfing? (y/n):\n"
+    default: "y"
+    private: no
 
-    - name: "auditd_enabled"
-      prompt: "Do you want to use auditd ? (Y or N):\n"
-      default: "Y"
-      private: no
+  - name: "auditd_enabled"
+    prompt: "Do you want to use auditd for security monitoring (see config.cfg)? (y/n):\n"
+    default: "y"
+    private: no
+
+  - name: "ssh_tunneling_enabled"
+    prompt: "Do you want each user to have their own account for SSH tunneling? (y/n):\n"
+    default: "y"
+    private: no
+
+  - name: "easyrsa_p12_export_password"
+    prompt: "Enter a password for p12 certificates:\n"
+    default: "vpn"
+    private: yes
       
-    - name: "ssh_tunneling_enabled"
-      prompt: "Do you want to use SSH tunneling ? (Y or N):\n"
-      default: "Y"
-      private: no
-      
-    - name: "easyrsa_p12_export_password"
-      prompt: "Enter the password for p12 certificates:\n"
-      default: "vpn"
-      private: yes
-      
-    - name: "IP_subject"
-      prompt: "Enter public IP address of your server: (IMPORTANT! This IP is used to verify the certificate)\n"
-      private: no
+  - name: "IP_subject"
+    prompt: "Enter the public IP address of your server: (IMPORTANT! This IP is used to verify the certificate)\n"
+    private: no
 
   tasks:
     - name: Add the server to the vpn-host group
@@ -76,7 +77,7 @@
     - common
     - security
     - vpn
-    - { role: proxy, when: proxy_enabled is defined and proxy_enabled == "Y" }
-    - { role: dns_adblocking , when: dns_enabled is defined and dns_enabled == "Y" }
-    - { role: logging, when: auditd_enabled is defined and auditd_enabled == 'Y' }
-    - { role: ssh_tunneling, when: ssh_tunneling_enabled is defined and ssh_tunneling_enabled == "Y" }     
+    - { role: proxy, when: proxy_enabled is defined and proxy_enabled == "y" }
+    - { role: dns_adblocking , when: dns_enabled is defined and dns_enabled == "y" }
+    - { role: logging, when: auditd_enabled is defined and auditd_enabled == "y" }
+    - { role: ssh_tunneling, when: ssh_tunneling_enabled is defined and ssh_tunneling_enabled == "y" }
