Make config.cfg a little more user-friendly

--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,15 @@
 ---
 
+# Add as many users as you want for your VPN server here
+users:
+  - dan
+  - jack
+
+# If you're using auditd for monitoring, add an email address to send logs
+auditd_action_mail_acct: email@example.com
+
+### Advanced users only below this line ###
+
 easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
@@ -13,7 +23,6 @@ vpn_network_ipv6: 'fd9d:bc11:4020::/48'
 server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
-
 # Enable this variable if you want to use a local DNS resolver to block ads while surfing. (True or False)
 service_dns: True
 
@@ -23,15 +32,6 @@ dns_servers:
   - 8.8.4.4
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
-  
-# IP address for the proxy and the local dns resolver
-local_service_ip: 172.16.0.1 
 
-users:
-  - mr.smith
-  - mrs.smith
-  
-#  
-# auditd options
-# email for auditd actions:
-auditd_action_mail_acct: email@example.com
+# IP address for the proxy and the local dns resolver
+local_service_ip: 172.16.0.1
