--- a/roles/ssh_tunneling/tasks/main.yml
+++ b/roles/ssh_tunneling/tasks/main.yml
@@ -14,8 +14,22 @@
     createhome: yes
     generate_ssh_key: yes
     shell: /bin/false
-    ssh_key_type: ecdsa
-    ssh_key_bits: 521
+    ssh_key_type: rsa
+    ssh_key_bits: 2048
     ssh_key_comment: '{{ item }}@{{ IP_subject_alt_name }}'
+    ssh_key_passphrase: "{{ easyrsa_p12_export_password }}"
     state: present
+  with_items: "{{ users }}"
+  
+- name: The authorized keys file created
+  file: 
+    src: '/var/jail/{{ item }}/.ssh/id_rsa.pub'
+    dest: '/var/jail/{{ item }}/.ssh/authorized_keys'
+    owner: "{{ item }}"
+    group: algo
+    state: link
+  with_items: "{{ users }}"
+
+- name: Fetch users SSH private keys
+  fetch: src='/var/jail/{{ item }}/.ssh/id_rsa' dest=configs/{{ IP_subject_alt_name }}_{{ item }}.ssh.pem flat=yes
   with_items: "{{ users }}"
