--- a/roles/ssh_tunneling/tasks/main.yml
+++ b/roles/ssh_tunneling/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: Ensure that the SSH users exist
   user:
     name: "{{ item }}"
-    group: algo
+    groups: algo
     home: '/var/jail/{{ item }}'
     createhome: yes
     generate_ssh_key: yes
@@ -19,6 +19,7 @@
     ssh_key_comment: '{{ item }}@{{ IP_subject_alt_name }}'
     ssh_key_passphrase: "{{ easyrsa_p12_export_password }}"
     state: present
+    append: yes
   with_items: "{{ users }}"
   
 - name: The authorized keys file created
@@ -26,7 +27,7 @@
     src: '/var/jail/{{ item }}/.ssh/id_rsa.pub'
     dest: '/var/jail/{{ item }}/.ssh/authorized_keys'
     owner: "{{ item }}"
-    group: algo
+    group: "{{ item }}"
     state: link
   with_items: "{{ users }}"
 
